fixed hero/footer cutting off

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,8 @@ header nav ul li#logo a {
 /* Hero */
 #hero {
    background: #C8102E url('../images/bg-tile-red.gif') top left repeat;
+   min-width: 1200px;
+   width: 100%;
 }
 
 #hero .container {
@@ -195,6 +197,8 @@ footer.main {
    background: #C8102E url('../images/bg-tile-red.gif') top left repeat;
    padding: 30px 0;
    color: white;
+   min-width: 1200px;
+   width: 100%;
 }
 
 #creditsa, #creditsa:visited {
